Updated required Java version to 11; Removed dependency on slf4j (use System.Logger instead); Updated junit from 4 to 5